# meshx

./: .credo.exs  .dialyzer_ignore.exs  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  mix.exs
.claude/research/: hex-hardware-farm-packages.md
.git.broken-icloud-2026-05-28/: COMMIT_EDITMSG  HEAD  ORIG_HEAD  config  index  index 10  index 11  index 12  index 13  index 14  index 15  index 16  index 17  index 18  index 2  index 3  index 4  index 5  index 6  index 7  index 8  index 9
.git.broken-icloud-2026-05-28/info/: refs  refs 2  refs 3  refs 4
.git.broken-icloud-2026-05-28/logs/: HEAD
.git.broken-icloud-2026-05-28/objects/info/: packs
.git.broken-icloud-2026-05-28/objects/pack/: multi-pack-index  pack-1e5273ea77518070fd7f7c6cdd85f63aeb6ffab5.idx  pack-1e5273ea77518070fd7f7c6cdd85f63aeb6ffab5.rev  pack-b70fe5fcb239fca13c6d87959f168f3bbb1bd298.idx  pack-b70fe5fcb239fca13c6d87959f168f3bbb1bd298.pack  pack-b70fe5fcb239fca13c6d87959f168f3bbb1bd298.rev  pack-d1eb9d2d4850f1879ec1531e0dc4b856c9ef209e.idx  pack-d1eb9d2d4850f1879ec1531e0dc4b856c9ef209e.rev  pack-d6f168d4368be99dadf189e82f4b0bee17fe755b.idx  pack-d6f168d4368be99dadf189e82f4b0bee17fe755b.pack  pack-d6f168d4368be99dadf189e82f4b0bee17fe755b.rev  pack-e9ea43be742868b2c5d9c4d1f7bf06563810581b.idx  pack-e9ea43be742868b2c5d9c4d1f7bf06563810581b.rev  pack-fc29213ee5bb856287bd281f9e00d3351970c95e.idx  pack-fc29213ee5bb856287bd281f9e00d3351970c95e.mtimes  pack-fc29213ee5bb856287bd281f9e00d3351970c95e.rev
.git.broken-icloud-2026-05-28/refs/backup/: master-before-push-20260513
.git.broken-icloud-2026-05-28/refs/heads/: master
.github/workflows/: ci.yml
apps/meshx_mob/: README.md  mix.exs
apps/meshx_mob/lib/: meshx_mob.ex
apps/meshx_mobile_app/: .gitignore  .tool-versions  CONTRIBUTING.md  README.md  mix.exs  mob.example.exs
apps/meshx_mobile_app/android/: AndroidManifest.xml  build.gradle.kts  build_device.sh  settings.gradle  settings.gradle.kts
apps/meshx_mobile_app/c_src/: meshx_ble_nif.c
apps/meshx_mobile_app/config/: config.exs
apps/meshx_mobile_app/ios/: AppDelegate.m  MeshxBLEBridge.swift  MobProvision.entitlements  MobProvision.swift  beam_main.m  build.sh  driver_tab_meshx_ios.c  meshx_ble_nif.m
apps/meshx_mobile_app/scripts/: generate_android_plugin_native.exs
apps/meshx_mobile_app/src/: meshx_ble_nif.erl  meshx_mobile_app.erl
apps/meshx_mobile_app/test/: test_helper.exs
apps/meshx_noise/: README.md  mix.exs
apps/meshx_noise/lib/: meshx_noise.ex
apps/meshx_noise/test/: test_helper.exs
apps/meshx_protocol/: README.md  mix.exs
apps/meshx_protocol/lib/: meshx_protocol.ex
apps/meshx_protocol/test/: meshx_protocol_test.exs
apps/meshx_runtime/: README.md  mix.exs
apps/meshx_runtime/lib/: meshx_runtime.ex
apps/meshx_runtime/test/: meshx_runtime_test.exs  test_helper.exs
apps/meshx_store/: README.md  mix.exs
apps/meshx_store/lib/: meshx_store.ex
apps/meshx_store/test/: test_helper.exs
apps/meshx_transport/: README.md  mix.exs
apps/meshx_transport/lib/: meshx_transport.ex
apps/meshx_transport/test/: test_helper.exs
apps/meshx_transport_ble/: README.md  mix.exs
apps/meshx_transport_ble/lib/: meshx_transport_ble.ex
apps/meshx_transport_ble/test/: meshx_transport_ble_test.exs
apps/mob_ble/: mix.exs
apps/mob_node/: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  mix.exs
apps/mob_node/android/: plugin_projects.gradle
apps/mob_node/android/app/src/main/jni/: CMakeLists.txt  beam_jni.c  build.zig
apps/mob_node/config/: config.exs
apps/mob_node/ios/: AppDelegate.m  Info.plist  MobBLEBridge.swift  beam_main.m  build.sh  build_device.sh  build_device_meshx.sh  driver_tab_meshx_ios.c  driver_tab_mob_ios.c  mob_ble_nif.m
apps/mob_node/scripts/: generate_android_plugin_native.exs
apps/mob_noise/: README.md  mix.exs
apps/mob_protocol/: README.md  mix.exs
apps/mob_routing/: README.md  mix.exs
apps/mob_routing_ble/: README.md  mix.exs
apps/mob_runtime/: README.md  mix.exs
apps/mob_store/: README.md  mix.exs
config/: config.exs  dev.exs  prod.exs  test.exs
docs/: ARCHITECTURE.md  BLE_BRIDGE.md  CONTRACTS.md  DEPLOYMENT.md  FAILURE_DOMAINS.md  FAILURE_RECOVERY.md  FEATURE_PARITY.md  KEY_ROTATION.md  METRICS.md  OPERATIONS.md  RELEASE.md  RUNTIME_API.md  TRANSPORTS.md  WIRE_FORMAT.md  WIRE_VECTORS.md  WORKSPACE_SAFETY.md  android_ble_capture_replay.md  android_ble_dispatch_validation.md  android_ble_message_delivery_validation.md  android_ble_validation.md  ble-lab-cheat-sheet.md  ble-t390-validation-notes.md  ble_carrier_decision.md  ble_mesh_progress.md  ble_transport_re_evaluation.md  ble_transport_strategy.md  chat_interface_mvp.md  local_ble_release_artifact_bundle.md  local_inbox_persistence_policy.md  local_inbox_trust_policy.md  mob_ble_bridge_migration.md  pr_mob_ble_cutover.md  publishing_mob_plugins.md  remaining_items_audit.md  rt01_locked_receive_fix.md  rt01_locked_receive_fix_levers.md  upstream_mob_migration_checklist.md  upstream_mob_patches.md
docs/releases/: mob_ble_phase3_cutover_announcement.md
meshx_mobile/: Package.swift  README.md
patches/: 01-mob_dev-meshx-build-additions.patch  02-mob-static-nif-table.patch  README.md
scripts/: android_ble_message_delivery_two_device.sh  audit_android_ble_message_delivery_completion.sh  ble_receiver.exs  ble_sender.exs  capture-hybrid-run.sh  launch_mob_ble_default_path.sh  tcp_receiver.exs  tcp_relay_node.exs  tcp_sender.exs  test_android_ble_message_delivery_two_device.sh  verify-t390-gatt-capture.sh
scripts/android/: 20260521-203001-adb-devices.txt  rt01-run.sh  rt01-sustained.sh
(+1267 files in other folders)
